--- a/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/documentlists.css
+++ b/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/documentlists.css
@@ -49,17 +49,24 @@ border-right-style	: none;
 border-bottom-style	: solid;
 border-left-style	: none;
 }
+
+.dataList .iconColumn {
+ width: 20px;
+ text-align: center;
+}
+
+
 .dataOutput td table td {
-border:0px none transparent;
+  border:0px none transparent;
 }
 
 .dataList thead th {
-background:#F1F2F3 none repeat scroll 0% 0%;
-border-bottom:1px solid #C7C7C7;
-color:#606161;
-padding:5px 3px;
-text-align:left;
-font-size :	10pt;
+  border-bottom:1px solid #C7C7C7;
+  color:#666;
+  padding:5px 3px;
+  text-align:left;
+  font-size :	11px;
+  font-weight: normal;
 }
 
 .dataList thead th a, .dataList thead th a:link {
@@ -84,17 +91,56 @@ margin:0pt;
 }
 
 .dataRowEven {
-background:#F2F7FC none repeat scroll 0% 0%;
+  background-color:#F2F7FC;
 }
 
 .dataRowOdd {
-background:#ECF6FF none repeat scroll 0% 0%;
 }
 
 .contextPanel {
-background-color:#EEEEEE;
-border-color:#CCCCDD;
-border-width: 0px 0px 1px 1px;
-border-style:solid;
-padding:1px
+
+}
+
+.context-edit-button {
+  float: right;
+}
+
+.context-edit-button a {
+font-size: 80%;
+  display:block;
+  padding: 0.35em 0.5em;
+  margin-left:5px;
+  border:1px solid #ccc;
+  background-color:#e7e7e7;
+  text-decoration: none;
+  border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  color:#333;
+  float:left;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(231,231,231)),
+    color-stop(0.66, rgb(255,255,255)));
+  background-image: -moz-linear-gradient(
+    center bottom,
+    rgb(231,231,231) 0%,
+    rgb(255,255,255) 66%);
+    /* For Internet Explorer 5.5 - 7 */
+   filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#ffffff', EndColorStr='#e8e8e8');   
+    /* For Internet Explorer 8 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff, endColorstr=#e8e8e8)";    
+}
+
+.context-edit-button a:link, .context-edit-button a:visited {
+  color:#333;
+}
+
+.context-edit-button a:hover {
+  cursor: pointer;
+  border: 1px inset #ccc;
+  text-decoration: none;
+  color:#000; 
 }
