NXP-6618: improve tooltip display

--- a/nuxeo-user-settings/nuxeo-user-settings-web/src/main/resources/web/nuxeo.war/layouts/user_settings_layout_template.xhtml
+++ b/nuxeo-user-settings/nuxeo-user-settings-web/src/main/resources/web/nuxeo.war/layouts/user_settings_layout_template.xhtml
@@ -25,8 +25,8 @@
                 <td class="iconColumn" style="vertical-align:top;">
                   <c:if test="#{!empty widget.helpLabel}">
                     <h:graphicImage value="/icons/lightbulb.png"
-                      onmouseover="tooltip.show('#{messages[widget.helpLabel]}', 500);"
-                      onmouseout="tooltip.hide();" />
+                      styleClass="layoutHelpLabel"
+                      title="#{messages[widget.helpLabel]}" />
                   </c:if>
                 </td>
                 <td class="labelColumn">
@@ -38,8 +38,8 @@
                 <td class="iconColumn" style="vertical-align:top;">
                   <c:if test="#{!empty widget.helpLabel}">
                     <h:graphicImage value="/icons/lightbulb.png"
-                      onmouseover="tooltip.show('#{widget.helpLabel}', 500);"
-                      onmouseout="tooltip.hide();" />
+                      styleClass="layoutHelpLabel"
+                      title="#{widget.helpLabel}" />
                   </c:if>
                 </td>
                 <td class="labelColumn">
@@ -57,5 +57,11 @@
 
     </tbody>
   </table>
+
+<script>
+  jQuery(document).ready(function() {
+    jQuery("img.layoutHelpLabel[title]").tooltip({delay:1000, offset: [0, 100], position: 'center center'});
+  });
+</script>
 
 </f:subview>
