--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
@@ -421,7 +421,7 @@ div.schedule-compact-default td.inactive-day td.header, div.schedule-compact-def
 /* End hide from IE5-mac */
 
 
-/* Righ click context menu classes 
+/* Righ click context menu classes
    (some css properties not friend with xml theme file) */
 
 #contextMenu {
@@ -557,11 +557,83 @@ padding:5px 0px 2px 0px;
 }
 
 #tooltipContent {
-  display:block; 
-  padding:2px 12px 3px 7px; 
-  margin-left:5px; 
-  background:#FFFFAA; 
+  display:block;
+  padding:2px 12px 3px 7px;
+  margin-left:5px;
+  background:#FFFFAA;
   color:#000000;
   border: 1px #333333;
   border-style:solid;
 }
+
+
+ .dropPanel {
+  padding: 10px;
+  background: #BBBBCC;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  height: 250px;
+ }
+
+ .dropzone {
+  display: block;
+  margin : 4px;
+  text-align: center;
+  vertical-align: middle;
+  font-size : 16pt;
+  font-family : Arial;
+ }
+
+.dropzoneHL {
+  border-style: dashed;
+  background-color: #F0F0F0;
+  border-width: 2px;
+  border-color: #CCCCCC;
+}
+
+.dropzoneTarget {
+  border-style: solid;
+  background-color: #EEEEEE;
+  border-width: 2px;
+  border-color: blue;
+  cursor : url('../img/plusDrop.gif'), crosshair;
+}
+
+ .dropzone-info-block {
+  display: block;
+  background-color: white;
+  width: 300px;
+  height: 70px;
+  overflow : auto;
+  align : center;
+  text-align: center;
+  margin : 4px;
+ }
+
+ .dropzone-info-progress {
+  background-color: orange;
+  height: 3px;
+  width: 0%;
+ }
+
+ .dropzone-info-item {
+  border : thin solid #999999;
+  margin : 2px;
+ }
+
+ .dropzone-info-name {
+  font-size : 9pt;
+  font-family : Arial;
+  text-align: center;
+ }
+
+ .dropzone-bar {
+  height: 20px;
+  font-size : 9pt;
+  font-family : Arial;
+ }
+
+ .dropzone-bar-btn {
+  visibility:hidden;
+ }
