NXP-6689 Add more Dnd Zones, cleanup JS, improve UI

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
@@ -567,10 +567,8 @@ padding:5px 0px 2px 0px;
 }
 
 
-
-
 #dropzone-info-panel {
-  background-color:#DDDDDD;
+  background-color:beige;
   display:none;
 }
 
