Fix sort icon on non-selected column

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/layouts/layout_listing_ajax_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/layouts/layout_listing_ajax_template.xhtml
@@ -105,7 +105,7 @@
                         <h:commandLink immediate="true"
                           action="#{provider.addSortInfo(layoutColumn.properties.sortPropertyName, true)}"
                           id="#{layoutColumn.widgets[0].name}_header_sort_add">
-                          <h:graphicImage value="/icons/sort_selected_down.png" />
+                          <h:graphicImage value="/icons/sort_down.png" />
                         </h:commandLink>
                       </span>
                       <div class="tooltip">
