--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/css/screen.css
@@ -766,26 +766,24 @@ padding:5px 0px 2px 0px;
   font-weight: bold;
   }
 
-.studioButton,a.studioButton {
-    background-color: #227ce6;
-    border: 1px solid #227ce6;
+.studioButton a {
+    background-color: #00a5b8;
+    border: 1px solid #00a5b8;
+    display: block;
     padding: 2px 20px;
     color: #f1f5f7;
     text-decoration: none;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
+    border-radius: 4px;
     text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
     font : 12px 'Lucida Grande',Verdana,Arial,sans-serif;
-    position: relative;
-    cursor: pointer;
     margin:0 0 0 15px;
 }
 
-.studioButton:hover,a.studioButton:hover {
-    background-color: #2888f8;
-    border: 1px solid #207ae4;
+.studioButton a:hover {
+    background-color: #00b6cb;
+    border: 1px solid #00b6cb;
     color: #fff;
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-    text-decoration:none;
+    text-decoration:none !important;
 }
